<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
...


    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/recipe_add_top_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/recipe_add_text_layout_category"
        app:layout_constraintEnd_toStartOf="@+id/recipe_add_text_layout_title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
...
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:helperText="Required"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
...

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recipe_add_edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recipe_add_edit_text_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recipe_add_text_layout_prep_time"
        style="@style/Theme.FoodBit.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
...

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recipe_add_edit_text_prep_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recipe_add_text_layout_num_servings"
        style="@style/Theme.FoodBit.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
...

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recipe_add_edit_text_num_servings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recipe_add_text_layout_comments"
        style="@style/Theme.FoodBit.TextInputLayout.FilledBox"
        android:layout_width="0dp"
...

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recipe_add_edit_text_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recipe_add_ingredients_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
...

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/recipe_add_ingredients_bar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
...

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipe_add_ingredients_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
...
