//package com.CMPUT301F22T01.foodbit;
//
//
//import static androidx.test.espresso.Espresso.onView;
//import static androidx.test.espresso.action.ViewActions.click;
//import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
//import static androidx.test.espresso.action.ViewActions.replaceText;
//import static androidx.test.espresso.action.ViewActions.scrollTo;
//import static androidx.test.espresso.assertion.ViewAssertions.doesNotExist;
//import static androidx.test.espresso.assertion.ViewAssertions.matches;
//import static androidx.test.espresso.contrib.RecyclerViewActions.actionOnItem;
//import static androidx.test.espresso.contrib.RecyclerViewActions.actionOnItemAtPosition;
//import static androidx.test.espresso.matcher.ViewMatchers.hasDescendant;
//import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
//import static androidx.test.espresso.matcher.ViewMatchers.withClassName;
//import static androidx.test.espresso.matcher.ViewMatchers.withContentDescription;
//import static androidx.test.espresso.matcher.ViewMatchers.withId;
//import static androidx.test.espresso.matcher.ViewMatchers.withParent;
//import static androidx.test.espresso.matcher.ViewMatchers.withText;
//import static org.hamcrest.Matchers.allOf;
//import static org.hamcrest.Matchers.is;
//
//import android.view.View;
//import android.view.ViewGroup;
//import android.view.ViewParent;
//
//import androidx.test.espresso.ViewInteraction;
//import androidx.test.ext.junit.rules.ActivityScenarioRule;
//import androidx.test.ext.junit.runners.AndroidJUnit4;
//import androidx.test.filters.LargeTest;
//
//import com.CMPUT301F22T01.foodbit.ui.LoadingPageActivity;
//
//import org.hamcrest.Description;
//import org.hamcrest.Matcher;
//import org.hamcrest.TypeSafeMatcher;
//import org.hamcrest.core.IsInstanceOf;
//import org.junit.Rule;
//import org.junit.Test;
//import org.junit.runner.RunWith;
//
//@LargeTest
//@RunWith(AndroidJUnit4.class)
//public class OldRecipesTest {
//
//    @Rule
//    public ActivityScenarioRule<LoadingPageActivity> mActivityScenarioRule =
//            new ActivityScenarioRule<>(LoadingPageActivity.class);
//
//    @Test
//    // The following tests are meant to be run together
//    public void recipeTests() throws InterruptedException {
//        // Test adding a recipe (US 02.01.01.01, US 02.07.01)
//        recipeAddTest();
//        // Test viewing details of a recipe (US 02.04.01.01)
//        recipeDetailTest();
//        // Test deleting a recipe (US 02.06.01)
//        recipeDeleteTest();
//    }
//
//    public void recipeAddTest() throws InterruptedException {
//        // click on the recipes icon on the bottom navigation bar
//        ViewInteraction bottomNavigationItemView = onView(
//                allOf(withId(R.id.fragment_recipe_book), withContentDescription("Recipe Book"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.nav_bar),
//                                        0),
//                                1),
//                        isDisplayed()));
//        bottomNavigationItemView.perform(click());
//
//        Thread.sleep(2000);
//
//        // check if navigated to the recipe book screen
//        ViewInteraction textView = onView(
//                allOf(withId(com.google.android.material.R.id.navigation_bar_item_large_label_view), withText("Recipe Book"),
//                        withParent(allOf(withId(com.google.android.material.R.id.navigation_bar_item_labels_group),
//                                withParent(allOf(withId(R.id.fragment_recipe_book), withContentDescription("Recipe Book"))))),
//                        isDisplayed()));
//        textView.check(matches(isDisplayed()));
//
//        // click on add button on recipe book screen
//        ViewInteraction actionMenuItemView = onView(
//                allOf(withId(R.id.recipe_add), withContentDescription("AddRecipe"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(androidx.constraintlayout.widget.R.id.action_bar),
//                                        1),
//                                0),
//                        isDisplayed()));
//        actionMenuItemView.perform(click());
//
//        // click on close button on recipe add screen
//        ViewInteraction appCompatImageButton = onView(
//                allOf(childAtPosition(
//                                allOf(withId(R.id.recipe_add_top_bar),
//                                        childAtPosition(
//                                                withId(R.id.constraintLayout),
//                                                0)),
//                                1),
//                        isDisplayed()));
//        appCompatImageButton.perform(click());
//
//        // check if addition is aborted
//        ViewInteraction textView24 = onView(
//                allOf(withId(R.id.item_recipe_title), withText("Sandwich"),
//                        withParent(withParent(withId(R.id.recyclerView_recipe_book))),
//                        isDisplayed()));
//        textView24.check(doesNotExist());
//
//        // click on the add button again
//        ViewInteraction actionMenuItemView2 = onView(
//                allOf(withId(R.id.recipe_add), withContentDescription("AddRecipe"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(androidx.constraintlayout.widget.R.id.action_bar),
//                                        1),
//                                0),
//                        isDisplayed()));
//        actionMenuItemView2.perform(click());
//
//        // click on add button (with a tick icon on top-right) on recipe add screen
//        ViewInteraction actionMenuItemView3 = onView(
//                allOf(withId(R.id.recipe_add_done), withContentDescription("ADD"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.recipe_add_top_bar),
//                                        2),
//                                0),
//                        isDisplayed()));
//        actionMenuItemView3.perform(click());
//
//        // check if the correct error messages are displayed
//        ViewInteraction textView2 = onView(
//                allOf(withId(com.google.android.material.R.id.textinput_error), withText("Required"),
//                        withParent(withParent(withParent(withId(R.id.recipe_add_text_layout_title)))),
//                        isDisplayed()));
//        textView2.check(matches(withText("Required")));
//        ViewInteraction textView3 = onView(
//                allOf(withId(com.google.android.material.R.id.textinput_error), withText("Required"),
//                        withParent(withParent(withParent(withId(R.id.recipe_add_text_layout_prep_time)))),
//                        isDisplayed()));
//        textView3.check(matches(withText("Required")));
//        ViewInteraction textView4 = onView(
//                allOf(withId(com.google.android.material.R.id.textinput_error), withText("Required"),
//                        withParent(withParent(withParent(withId(R.id.recipe_add_text_layout_num_servings)))),
//                        isDisplayed()));
//        textView4.check(matches(withText("Required")));
//
//        // enter a title
//        ViewInteraction textInputEditText12 = onView(
//                allOf(withId(R.id.recipe_add_edit_text_title),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.recipe_add_text_layout_title),
//                                        0),
//                                0),
//                        isDisplayed()));
//        textInputEditText12.perform(replaceText("Sandwich"), closeSoftKeyboard());
//
//        // enter zeros in the preparation time text field
//        ViewInteraction textInputEditText13 = onView(
//                allOf(withId(R.id.recipe_add_edit_text_prep_time),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.recipe_add_text_layout_prep_time),
//                                        0),
//                                0),
//                        isDisplayed()));
//        textInputEditText13.perform(replaceText("0000"), closeSoftKeyboard());
//
//        // check if zeros is not entered (check function of removing starting zeros)
//        ViewInteraction editText = onView(
//                allOf(withId(R.id.recipe_add_edit_text_prep_time),
//                        withParent(withParent(withId(R.id.recipe_add_text_layout_prep_time))),
//                        isDisplayed()));
//        editText.check(matches(withText("")));
//
//        // enter a oversize preparation time
//        ViewInteraction textInputEditText15 = onView(
//                allOf(withId(R.id.recipe_add_edit_text_prep_time),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.recipe_add_text_layout_prep_time),
//                                        0),
//                                0),
//                        isDisplayed()));
//        textInputEditText15.perform(replaceText("481"), closeSoftKeyboard());
//
//        //check if the correct error message is displayed
//        ViewInteraction textView5 = onView(
//                allOf(withId(com.google.android.material.R.id.textinput_error), withText("Maximum time exceeded (480 minutes)"),
//                        withParent(withParent(IsInstanceOf.instanceOf(android.widget.LinearLayout.class))),
//                        isDisplayed()));
//        textView5.check(matches(withText("Maximum time exceeded (480 minutes)")));
//
//        // enter a category
//        ViewInteraction textInputEditText16 = onView(
//                allOf(withId(R.id.recipe_add_edit_text_category),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.recipe_add_text_layout_category),
//                                        0),
//                                0),
//                        isDisplayed()));
//        textInputEditText16.perform(replaceText("Lunch"), closeSoftKeyboard());
//
//        // enter a preparation time
//        ViewInteraction textInputEditText17 = onView(
//                allOf(withId(R.id.recipe_add_edit_text_prep_time), withText("481"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.recipe_add_text_layout_prep_time),
//                                        0),
//                                0),
//                        isDisplayed()));
//        textInputEditText17.perform(replaceText("10"));
//
//        // enter zeros in the preparation time text field
//        ViewInteraction textInputEditText19 = onView(
//                allOf(withId(R.id.recipe_add_edit_text_num_servings),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.recipe_add_text_layout_num_servings),
//                                        0),
//                                0),
//                        isDisplayed()));
//        textInputEditText19.perform(replaceText("00000"), closeSoftKeyboard());
//
//        // check if zeros is not entered (check function of removing starting zeros)
//        ViewInteraction editText2 = onView(
//                allOf(withId(R.id.recipe_add_edit_text_num_servings),
//                        withParent(withParent(withId(R.id.recipe_add_text_layout_num_servings))),
//                        isDisplayed()));
//        editText2.check(matches(withText("")));
//
//        // enter a number of servings
//        ViewInteraction textInputEditText21 = onView(
//                allOf(withId(R.id.recipe_add_edit_text_num_servings),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.recipe_add_text_layout_num_servings),
//                                        0),
//                                0),
//                        isDisplayed()));
//        textInputEditText21.perform(replaceText("1"), closeSoftKeyboard());
//
//        // enter comments
//        ViewInteraction textInputEditText22 = onView(
//                allOf(withId(R.id.recipe_add_edit_text_comments),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.recipe_add_text_layout_comments),
//                                        0),
//                                0),
//                        isDisplayed()));
//        textInputEditText22.perform(replaceText("A simple lunch."), closeSoftKeyboard());
//
//        // click on add button in ingredient list
//        ViewInteraction actionMenuItemView5 = onView(
//                allOf(withId(R.id.recipe_add_ingredient_add), withContentDescription("Add an ingredient"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.recipe_add_ingredients_bar),
//                                        1),
//                                0),
//                        isDisplayed()));
//        actionMenuItemView5.perform(click());
//
//        // click on cancel button
//        ViewInteraction materialButton6 = onView(
//                allOf(withId(android.R.id.button3), withText("Cancel"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withClassName(is("android.widget.ScrollView")),
//                                        0),
//                                0)));
//        materialButton6.perform(scrollTo(), click());
//
//        // check if addition is aborted
//        ViewInteraction textView25 = onView(
//                allOf(withId(R.id.item_ingredient_description), withText("Bread"),
//                        withParent(withParent(withId(R.id.recipe_add_ingredients_list))),
//                        isDisplayed()));
//        textView25.check(doesNotExist());
//
//        // click on the add button again
//        ViewInteraction actionMenuItemView6 = onView(
//                allOf(withId(R.id.recipe_add_ingredient_add), withContentDescription("Add an ingredient"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.recipe_add_ingredients_bar),
//                                        1),
//                                0),
//                        isDisplayed()));
//        actionMenuItemView6.perform(click());
//
//        ViewInteraction textInputEditText24 = onView(
//                allOf(withId(R.id.recipe_add_ingredient_add_edit_text_description),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.recipe_add_ingredient_add_layout_description),
//                                        0),
//                                0),
//                        isDisplayed()));
//        textInputEditText24.perform(click());
//
//        // enter a description
//        ViewInteraction textInputEditText25 = onView(
//                allOf(withId(R.id.recipe_add_ingredient_add_edit_text_description),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.recipe_add_ingredient_add_layout_description),
//                                        0),
//                                0),
//                        isDisplayed()));
//        textInputEditText25.perform(replaceText("Bread"), closeSoftKeyboard());
//
//        // enter an amount
//        ViewInteraction textInputEditText26 = onView(
//                allOf(withId(R.id.recipe_add_ingredient_add_edit_text_amount),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.recipe_add_ingredient_add_layout_amount),
//                                        0),
//                                0),
//                        isDisplayed()));
//        textInputEditText26.perform(replaceText("2"), closeSoftKeyboard());
//
//        // enter a unit
//        ViewInteraction textInputEditText27 = onView(
//                allOf(withId(R.id.recipe_add_ingredient_add_edit_text_unit),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.recipe_add_ingredient_add_layout_unit),
//                                        0),
//                                0),
//                        isDisplayed()));
//        textInputEditText27.perform(replaceText("slice"), closeSoftKeyboard());
//
//        // click add
//        ViewInteraction materialButton8 = onView(
//                allOf(withId(android.R.id.button1), withText("Add"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withClassName(is("android.widget.ScrollView")),
//                                        0),
//                                3)));
//        materialButton8.perform(scrollTo(), click());
//
//        // check if ingredient is displayed
//        ViewInteraction textView10 = onView(
//                allOf(withId(R.id.item_ingredient_description), withText("Bread"),
//                        withParent(withParent(withId(R.id.recipe_add_ingredients_list))),
//                        isDisplayed()));
//        textView10.check(matches(withText("Bread")));
//        ViewInteraction textView11 = onView(
//                allOf(withId(R.id.item_ingredient_amount), withText("2.0"),
//                        withParent(withParent(withId(R.id.recipe_add_ingredients_list))),
//                        isDisplayed()));
//        textView11.check(matches(withText("2.0")));
//        ViewInteraction textView12 = onView(
//                allOf(withId(R.id.item_ingredient_unit), withText("slice"),
//                        withParent(withParent(withId(R.id.recipe_add_ingredients_list))),
//                        isDisplayed()));
//        textView12.check(matches(withText("slice")));
//
//        // click add button to add another ingredient
//        ViewInteraction actionMenuItemView7 = onView(
//                allOf(withId(R.id.recipe_add_ingredient_add), withContentDescription("Add an ingredient"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.recipe_add_ingredients_bar),
//                                        1),
//                                0),
//                        isDisplayed()));
//        actionMenuItemView7.perform(click());
//
//        // enter a description
//        ViewInteraction textInputEditText28 = onView(
//                allOf(withId(R.id.recipe_add_ingredient_add_edit_text_description),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.recipe_add_ingredient_add_layout_description),
//                                        0),
//                                0),
//                        isDisplayed()));
//        textInputEditText28.perform(replaceText("egg"), closeSoftKeyboard());
//
//        // enter an amount
//        ViewInteraction textInputEditText29 = onView(
//                allOf(withId(R.id.recipe_add_ingredient_add_edit_text_amount),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.recipe_add_ingredient_add_layout_amount),
//                                        0),
//                                0),
//                        isDisplayed()));
//        textInputEditText29.perform(replaceText("1"), closeSoftKeyboard());
//
//        // enter a unit
//        ViewInteraction textInputEditText30 = onView(
//                allOf(withId(R.id.recipe_add_ingredient_add_edit_text_unit),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.recipe_add_ingredient_add_layout_unit),
//                                        0),
//                                0),
//                        isDisplayed()));
//        textInputEditText30.perform(replaceText("item"), closeSoftKeyboard());
//
//        // enter a category
//        ViewInteraction textInputEditText31 = onView(
//                allOf(withId(R.id.recipe_add_ingredient_add_edit_text_category),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.recipe_add_ingredient_add_layout_category),
//                                        0),
//                                0),
//                        isDisplayed()));
//        textInputEditText31.perform(replaceText("fridge"), closeSoftKeyboard());
//
//        // add the ingredient
//        ViewInteraction materialButton9 = onView(
//                allOf(withId(android.R.id.button1), withText("Add"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withClassName(is("android.widget.ScrollView")),
//                                        0),
//                                3)));
//        materialButton9.perform(scrollTo(), click());
//
//        // check if ingredient is displayed
//        ViewInteraction textView14 = onView(
//                allOf(withId(R.id.item_ingredient_description), withText("egg"),
//                        withParent(withParent(withId(R.id.recipe_add_ingredients_list))),
//                        isDisplayed()));
//        textView14.check(matches(withText("egg")));
//        ViewInteraction textView15 = onView(
//                allOf(withId(R.id.item_ingredient_amount), withText("1.0"),
//                        withParent(withParent(withId(R.id.recipe_add_ingredients_list))),
//                        isDisplayed()));
//        textView15.check(matches(withText("1.0")));
//        ViewInteraction textView16 = onView(
//                allOf(withId(R.id.item_ingredient_unit), withText("item"),
//                        withParent(withParent(withId(R.id.recipe_add_ingredients_list))),
//                        isDisplayed()));
//        textView16.check(matches(withText("item")));
//
//        // click on ingredient egg
//        ViewInteraction recyclerView4 = onView(
//                allOf(withId(R.id.recipe_add_ingredients_list),
//                        childAtPosition(
//                                withId(R.id.recipe_add_ingredients_layout),
//                                1)));
//        recyclerView4.perform(actionOnItemAtPosition(1, click()));
//
//        // check if the correct information is in the text fields
//        ViewInteraction editText3 = onView(
//                allOf(withId(R.id.recipe_add_ingredient_add_edit_text_description), withText("egg"),
